fixed footer width, fixed searchbar on firefox, tweaked margins on search form

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ header {
 
 #searchform {
     width: fit-content;
+    width: -moz-fit-content;
     border-top: 2px solid #F2F2F2;
     border-bottom: 2px solid #F2F2F2;
     border-radius: 15px;
@@ -152,7 +153,7 @@ header {
     border-radius: 50px;
     border: 2px solid #F2F2F2;
     border-left-style: none;
-    margin: 20px 0px 0px 20px;
+    margin: 30px 0px 0px 30px;
     background-color: white;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -183,7 +184,7 @@ header {
 }
 
 #numberhits{
-    margin-top: 5px;
+    margin-top: 20px;
     display: flex;
     align-items: flex-start;
 }
@@ -408,7 +409,7 @@ header {
 
 footer {
     background-color: #f2f2f2;
-    width: 100%;
+    max-width: 100%;
     margin-top: 30px;
     padding: 30px 0px 30px 0px;
 }
